<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_chopper"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <!--TITLE FORM-->
        <TextView
            android:id="@+id/tv_title_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plot"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_edit"
            app:layout_constraintLeft_toLeftOf="@id/et_plot"
            app:layout_constraintRight_toRightOf="@id/et_plot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/et_bt"
            app:layout_constraintRight_toRightOf="@id/et_bt"
            app:layout_constraintTop_toTopOf="@id/tv_title_plot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/et_th"
            app:layout_constraintRight_toRightOf="@id/et_th"
            app:layout_constraintTop_toTopOf="@id/tv_title_plot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/et_ar"
            app:layout_constraintRight_toRightOf="@id/et_ar"
            app:layout_constraintTop_toTopOf="@id/tv_title_plot" />

        <!--FORM INPUT-->
        <EditText
            android:id="@+id/et_plot"
            tools:ignore="LabelFor"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/plot"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:padding="5dp"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_plot" />

        <EditText
            android:id="@+id/et_th"
            tools:ignore="LabelFor"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/th"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:padding="5dp"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@id/et_plot"
            app:layout_constraintRight_toLeftOf="@id/et_bt"
            app:layout_constraintTop_toTopOf="@id/et_plot" />

        <EditText
            android:id="@+id/et_bt"
            tools:ignore="LabelFor"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/bt"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:padding="5dp"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@id/et_th"
            app:layout_constraintRight_toLeftOf="@id/et_ar"
            app:layout_constraintTop_toTopOf="@id/et_th" />

        <EditText
            android:id="@+id/et_ar"
            tools:ignore="LabelFor"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/ar"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:padding="5dp"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_th" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_upload2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_ar"
            app:riv_corner_radius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bt_delete"
            app:layout_constraintTop_toBottomOf="@id/iv_upload2"
            app:layout_constraintHorizontal_weight="0.5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/bt_save"
            app:layout_constraintTop_toTopOf="@id/bt_save"
            app:layout_constraintHorizontal_weight="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>