<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_data_ridger"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_title_sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_sampel"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/et_no_sample"
            app:layout_constraintBottom_toBottomOf="@id/et_no_sample"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_no_sample"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:autofillHints="@string/title_no_spk"
            android:background="@drawable/bg_edit_text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_edit"
            app:layout_constraintLeft_toRightOf="@id/tv_title_sample"
            tools:ignore="LabelFor" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_poros_gulud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="#00796B"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cv_kuku_ridger"
            app:layout_constraintTop_toBottomOf="@id/et_no_sample">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_title_poros_gulud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_poros_gulud"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_poros_gulud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text_white"
                    android:gravity="center"
                    android:hint="@string/cm"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:maxLength="5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_poros_gulud" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_kuku_ridger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="#00796B"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:layout_constraintLeft_toRightOf="@id/cv_poros_gulud"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_poros_gulud">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_title_kuku_ridger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_kuku_ridger"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_kuku_ridger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text_white"
                    android:gravity="center"
                    android:hint="@string/cm"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:maxLength="5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_kuku_ridger" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_upload2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_add_photo"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_kuku_ridger"
            app:riv_corner_radius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bt_delete"
            app:layout_constraintTop_toBottomOf="@id/iv_upload2"
            app:layout_constraintHorizontal_weight="0.5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/bt_save"
            app:layout_constraintTop_toTopOf="@id/bt_save"
            app:layout_constraintHorizontal_weight="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>